@@ -1,0 +1,51 @@
+<configure xmlns="http://namespaces.zope.org/zope"
+    xmlns:monkey="http://namespaces.plone.org/monkey"
+    xmlns:zcml="http://namespaces.zope.org/zcml"
+    i18n_domain="eea">
+
+    <monkey:patch
+        description="Fix getSize method for blob fields"
+        class="plone.app.blob.field.BlobWrapper"
+        original="getSize"
+        replacement=".patch_blob.patched_getSize"
+        docstringWarning="true"
+        />
+
+    <!--original experimental.blobmissing configure.zcml file-->
+	<include package="collective.monkeypatcher" />
+	<include package="collective.monkeypatcher" file="meta.zcml" />
+	
+    <monkey:patch
+        description="Fix get_size method for blob fields"
+        class="plone.app.blob.field.BlobWrapper"
+        original="get_size"
+        replacement=".patches.patched_field_get_size"
+		docstringWarning="true"
+        />
+
+    <monkey:patch
+        description="Fix index_html method for blob fields"
+        class="plone.app.blob.field.BlobField"
+        original="index_html"
+        replacement=".patches.patched_field_index_html"
+		docstringWarning="true"
+		preserveOriginal="true"
+        />
+
+    <monkey:patch
+        description="Fix get_size method for blob fields"
+        class="Products.ATContentTypes.content.base.ATCTMixin"
+        original="get_size"
+        replacement=".patches.patched_class_get_size"
+		docstringWarning="true"
+        />
+
+    <monkey:patch
+        description="Fix getScale method for blob mixins"
+        class="plone.app.blob.mixins.ImageFieldMixin"
+        original="getScale"
+        replacement=".patches.patched_getScale"
+		docstringWarning="true"
+        />
+
+</configure>
